--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Base Navigation Controller-->
         <scene sceneID="A8f-S3-jsq">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dBa-ZC-Clc" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dBa-ZC-Clc" customClass="CHBaseNavigationController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1sA-ut-qjc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
