--- a/CHCloudHealth/Base.lproj/Login.storyboard
+++ b/CHCloudHealth/Base.lproj/Login.storyboard
@@ -643,6 +643,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
+                                    <action selector="nextAction:" destination="IWf-7y-EIw" eventType="touchUpInside" id="n38-hG-w4x"/>
                                     <segue destination="taU-Nc-idX" kind="push" id="tQa-yl-PXa"/>
                                 </connections>
                             </button>
@@ -686,6 +687,10 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="重置密码(1/2)" id="DUF-Ww-sBV"/>
+                    <connections>
+                        <outlet property="btnNext" destination="wRW-Nc-Mo0" id="TpM-N2-1tb"/>
+                        <outlet property="mobileTextField" destination="2fy-p6-VHW" id="y9A-vM-7jt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wjm-Ec-vQd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -836,6 +841,9 @@
                                         <include reference="Ra6-GD-bdU"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <action selector="confirmAction:" destination="taU-Nc-idX" eventType="touchUpInside" id="IKc-GA-W7K"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -916,6 +924,15 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="重置密码(2/2)" id="OQW-5C-R4G"/>
+                    <connections>
+                        <outlet property="btnConfirm" destination="YAk-lc-W7M" id="2t6-hN-3wU"/>
+                        <outlet property="btnGetCaptcha" destination="yOn-ao-q2w" id="2Eq-Z3-KGQ"/>
+                        <outlet property="captchaTextField" destination="RrJ-Hd-dFD" id="HoZ-zM-OPt"/>
+                        <outlet property="newPsdAgainTextField" destination="nwl-Uq-YZo" id="jQ3-6f-3H0"/>
+                        <outlet property="newPsdTextField" destination="MQo-JU-BxS" id="mPU-Wi-e4t"/>
+                        <outlet property="psdAgainTextField" destination="nwl-Uq-YZo" id="WUI-j3-Dx5"/>
+                        <outlet property="psdTextField" destination="MQo-JU-BxS" id="r2r-H4-3w2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="plT-FW-eYw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
